--- a/back/pom.xml
+++ b/back/pom.xml
@@ -36,6 +36,12 @@
     		<version>3.1.1</version> <!-- Asegúrate de usar la última versión -->
 		</dependency>
 		<dependency>
+    		<groupId>mysql</groupId>
+    		<artifactId>mysql-connector-j</artifactId>
+   			 <version>8.0.33</version> <!-- Usa la versión más reciente -->
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
